k8s/rails-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
      - name: rails-container
        image: docker.io/avy1013/my-rails-app:latestv4
        ports:
        - containerPort: 3000 
---
apiVersion: v1
kind: Service
metadata:
  name: rails-service
  labels:
    app: rails-app
spec:
  type: ClusterIP  # Change if you want external access
  ports:
    - port: 3000       # Port exposed by the service
      targetPort: 3000 # Port on the container
      protocol: TCP
  selector:
    app: rails-app
