k8s/rails.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-ingress
  namespace: default
spec:
  rules:
  - host: rails.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rails-service
            port:
              number: 3000
